# libcal

./: Makefile  Makefile.am  cal.c  cal.h  configure.ac  libcal.pc  libcal.pc.in
.forgejo/workflows/: build.yml
debian/: changelog  control  libcal-dev.install  rules
src/: Makefile.am  cal.c  cal.h
